<resources>
    <string name="app_name">MusicWiki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="musicwiki">musicwiki</string>
    <string name="welcome">Welcome!</string>
    <string name="choose_a_genre_to_start_with">Choose a genre to start with</string>
    <string name="playcount">Playcount</string>
    <string name="followers">Followers</string>
    <string name="back">back</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="top_albums">Top Albums</string>
</resources>