<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.musicwiki.repo.network.artistinfo.ArtistInfo" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/frameLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayout5"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/img_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/music_wiki_bg"
                    android:scaleType="centerCrop"
                    app:set_image="@{model.artist.image[3].text}" />

                <TextView
                    android:id="@+id/txt_album_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@{model.artist.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    tools:text="@tools:sample/cities" />

                <TextView
                    android:id="@+id/txt_play_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="40dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:set_count="@{model.artist.stats.playcount}"
                    tools:text="@tools:sample/us_zipcodes" />

                <TextView
                    android:id="@+id/lbl_play_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="40dp"
                    android:layout_marginBottom="18dp"
                    android:text="@string/playcount"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="40dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:set_count="@{model.artist.stats.listeners}"
                    tools:text="@tools:sample/us_zipcodes" />

                <TextView
                    android:id="@+id/lbl_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="18dp"
                    android:text="@string/followers"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <ImageButton
                    android:id="@+id/img_back_artist"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
                    app:tint="?attr/colorOnPrimary"
                    tools:ignore="SpeakableTextPresentCheck" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_album_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_genre" />

            <TextView
                android:id="@+id/txt_album_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autoLink="all"
                android:text="@{model.artist.bio.summary}" />

            <TextView
                android:id="@+id/lbl_top_tracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/top_tracks"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcr_artist_top_tracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_album_tracks_artist" />

            <TextView
                android:id="@+id/lbl_top_albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/top_albums"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcr_artist_top_albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_album_tracks_artist" />

        </LinearLayout>
    </ScrollView>
</layout>